<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">



    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/guideline5"
                                                android:orientation="horizontal"
                                                app:layout_constraintGuide_percent="0.4"/>
    <Button
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="43dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="@dimen/bmi_margin_elements_vertical"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="@dimen/bmi_margin_elements_vertical"
            android:layout_marginTop="@dimen/bmi_margin_elements_vertical" app:layout_constraintTop_toBottomOf="@+id/bmi_text"
            android:text="@string/button_name"
            android:onClick="onSendMessage" android:backgroundTint="@color/ORANGE"/>
    <TextView
            android:id="@+id/mass_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="@dimen/bmi_margin_elements_vertical"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="@dimen/bmi_margin_elements_vertical"
            app:layout_constraintHorizontal_bias="0.0"
            android:textSize="18sp"
            android:text="@string/mass_kg"
            android:layout_marginTop="@dimen/bmi_margin_elements_vertical" app:layout_constraintTop_toBottomOf="@+id/imageView"/>
    <EditText

            android:id="@+id/mass_edit"
            android:layout_width="@dimen/bmi_no_width"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:text=""
            android:layout_marginTop="@dimen/bmi_margin_elements_vertical"
            app:layout_constraintTop_toBottomOf="@+id/mass_text" android:layout_marginStart="@dimen/bmi_margin_elements_vertical"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="@dimen/bmi_margin_elements_vertical"
            app:layout_constraintEnd_toEndOf="parent" android:maxLength="3"/>
    <TextView
            android:id="@+id/height_text"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="@dimen/bmi_margin_elements_vertical"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/bmi_margin_elements_vertical"
            android:layout_marginTop="@dimen/bmi_margin_elements_vertical"
            app:layout_constraintTop_toBottomOf="@+id/mass_edit"
            app:layout_constraintHorizontal_bias="0.0" android:layout_width="wrap_content" android:textSize="18sp"
            android:text="@string/height_cm"/>
    <EditText
            android:id="@+id/height_edit"
            android:layout_width="@dimen/bmi_no_width"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:text=""
            android:layout_marginTop="@dimen/bmi_margin_elements_vertical"
            app:layout_constraintTop_toBottomOf="@+id/height_text" android:layout_marginStart="@dimen/bmi_margin_elements_vertical"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="@dimen/bmi_margin_elements_vertical"
            app:layout_constraintEnd_toEndOf="parent" android:maxLength="3"/>
    <TextView
            android:id="@+id/result_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="@dimen/bmi_margin_elements_vertical"
            app:layout_constraintTop_toBottomOf="@+id/height_edit"
            android:textSize="24sp" android:textAlignment="textStart"
            android:text="@string/zero"
            android:layout_marginTop="@dimen/bmi_margin_elements_vertical" android:layout_marginStart="@dimen/bmi_margin_elements_vertical"
            app:layout_constraintStart_toStartOf="parent" android:visibility="visible"/>
    <TextView
            android:id="@+id/bmi_text"
            android:text="@string/question_mark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/bmi_margin_elements_vertical"
            app:layout_constraintTop_toBottomOf="@+id/result_text" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/bmi_margin_elements_vertical" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/bmi_margin_elements_vertical" android:textSize="30sp"
            android:visibility="visible"/>
    <androidx.appcompat.widget.Toolbar
            android:layout_width="@dimen/toolbar_margin"
            android:layout_height="@dimen/toolbar_height"
            android:background="?attr/colorPrimary"
            android:theme="?attr/actionBarTheme"
            android:minHeight="?attr/actionBarSize"
            android:id="@+id/toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/app_name"
            app:titleTextColor="@android:color/white" android:visibility="visible"/>
    <ImageView
            android:src="@drawable/fatcat"
            android:layout_width="@dimen/bmi_no_width"
            android:layout_height="@dimen/bmi_no_height"
            android:id="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/bmi_margin_elements_vertical" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="@dimen/bmi_margin_elements_vertical"
            android:layout_marginBottom="@dimen/bmi_margin_elements_vertical" app:layout_constraintBottom_toTopOf="@+id/guideline5"
            android:layout_marginTop="@dimen/bmi_margin_elements_vertical" app:layout_constraintTop_toBottomOf="@+id/toolbar"/>
    <Button
            android:layout_width="@dimen/bmi_info_width_vertical"
            android:layout_height="@dimen/bmi_info_height_vertical"
            android:id="@+id/info"
            android:onClick="infoClick"
            android:background="@android:drawable/ic_media_next" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/bmi_margin_elements_vertical" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/bmi_margin_elements_vertical" app:layout_constraintHorizontal_bias="0.698"
            android:layout_marginTop="@dimen/bmi_margin_elements_vertical"
            app:layout_constraintTop_toBottomOf="@+id/height_edit"
            android:backgroundTint="@color/ORANGE"/>


</androidx.constraintlayout.widget.ConstraintLayout>